--- a/app/src/main/res/layout/activity_membership_login.xml
+++ b/app/src/main/res/layout/activity_membership_login.xml
@@ -24,12 +24,12 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            android:fontFamily="sans-serif"
             android:text="Easy Inventory"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            android:fontFamily="@font/trade_winds"
             android:textColor="@color/purple_700"
-            android:layout_marginBottom="20dp"/>
+            android:textSize="20sp"
+            android:textStyle="bold" />
 
 
         <!-- Progress Bar -->
