--- a/app/src/main/res/menu/menu_product_search.xml
+++ b/app/src/main/res/menu/menu_product_search.xml
@@ -1,16 +1,22 @@
+<?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <!-- Settings -->
+
+    <item
+        android:id="@+id/action_refresh"
+        android:title="Refresh"
+        app:showAsAction="ifRoom" />
+
     <item
         android:id="@+id/action_settings"
-        android:icon="@drawable/baseline_info_24"
         android:title="Settings"
-        android:visible="true"
         app:showAsAction="always" />
 
-
-
+    <item
+        android:id="@+id/action_logout"
+        android:title="Log out"
+        app:showAsAction="always" />
 
 </menu>
 
