--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -16,5 +16,12 @@
         app:showAsAction="never" />
 
 
+    <item
+        android:id="@+id/action_logout"
+        android:title="Log out"
+        app:showAsAction="never"/>
+
+
+
 </menu>
 
