--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -8,7 +8,7 @@
     <item
         android:id="@+id/action_print"
         android:title="Print label"
-        app:showAsAction="ifRoom|withText" />
+        app:showAsAction="never" />
 
     <item
         android:id="@+id/action_export_csv"
